<resources>
    <string name="app_name">Mapper</string>
    <string name="loading">Loading</string>
    <string name="copyright_text">Copyright © 2022 M.A. Dole</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>

    <string name="activity_login_title">Login</string>
    <string name="activity_login_content_description_app_icon">App Icon</string>
    <string name="activity_login_content_description_app_logo">App Logo</string>
    <string name="activity_login_welcome_again">Welcome</string>
    <string name="activity_login_login_to_your_account">Login to your account</string>
    <string name="activity_login_field_hint_email">Email</string>
    <string name="activity_login_field_hint_password">Password</string>
    <string name="activity_login_forgot_password">Forgot your password?</string>
    <string name="activity_login_remember_me">Remember Me</string>
    <string name="activity_login_no_account">Don\'t you have an account?</string>
    <string name="activity_login_action_sign_in">Sign In</string>

    <string name="activity_sign_up_title">Sign Up</string>
    <string name="activity_sign_up_welcome">Welcome</string>
    <string name="activity_sign_up_tag_line">Create a new account...</string>
    <string name="activity_sign_up_first_name">First Name</string>
    <string name="activity_sign_up_last_name">Last Name</string>
    <string name="activity_sign_up_password">Password</string>
    <string name="activity_sign_up_confirm_password">Confirm Password</string>
    <string name="activity_sign_up_sign_up">Sign Up</string>
    <string name="activity_sign_up_have_account">Already have an account?</string>

    <string name="activity_reset_password_step1_title">Reset Account</string>
    <string name="activity_reset_password_step1_welcome">Reset Account</string>
    <string name="activity_reset_password_step1_tag_line">Please enter your account email.</string>
    <string name="activity_reset_password_step1_email">Email</string>
    <string name="activity_reset_password_step1_action_next">Next</string>

    <string name="activity_reset_password_step2_title">Reset Account</string>
    <string name="activity_reset_password_step2_message">We have sent you the one time password to</string>
    <string name="activity_reset_password_step2_action_next">Next</string>
    <string name="activity_reset_password_step2_action_resend">Resend</string>

    <string name="activity_reset_password_step3_title">Reset Account</string>
    <string name="activity_reset_password_step3_tag_line">Choose a new secure password.</string>
    <string name="activity_reset_password_step3_password">Password</string>
    <string name="activity_reset_password_step3_confirm_password">Confirm Password</string>
    <string name="activity_reset_password_step3_action_save">Save</string>

    <string name="title_activity_index">Home</string>

    <string name="menu_action_refresh">Refresh</string>
    <string name="menu_action_generate_schedule">Generate Schedule</string>

    <string name="activity_main_drawer_menu_home">Home</string>
    <string name="activity_main_drawer_menu_subjects">Subjects</string>
    <string name="activity_main_drawer_menu_schedule">Schedule</string>
    <string name="activity_main_drawer_menu_settings">Settings</string>
    <string name="activity_main_drawer_menu_account_management">Account Management</string>
    <string name="activity_main_drawer_menu_logout">Log Out</string>

    <string name="logout_dialog_title">Log Out</string>
    <string name="logout_dialog_message">Are you sure that you want to log out of your account?</string>
    <string name="logout_dialog_action_cancel">Cancel</string>
    <string name="logout_dialog_action_logout">Logout</string>
    <string name="logout_dialog_action_logging_out">Logging out...</string>


    <string name="index_fragment_settings_message">Here, you can find the parameters that are used to generate your schedule.</string>
    <string name="index_fragment_settings_prioritisation">Prioritisation</string>
    <string name="index_fragment_settings_interval">Interval (Minutes)</string>
    <string name="index_fragment_settings_max_duration_of_activity">Activity Max Duration (Minutes)</string>
    <string name="index_fragment_settings_day_starts_at">Day starts at</string>
    <string name="index_fragment_settings_day_ends_at">Day ends at</string>
    <string name="index_fragment_settings_save">Save</string>

    <string name="index_fragment_account_management_message">Here, you can change your personal details.</string>
    <string name="index_fragment_account_management_firstname">First Name</string>
    <string name="index_fragment_account_management_lastname">Last Name</string>
    <string name="index_fragment_account_management_save">Save</string>
    <string name="index_fragment_account_management_change_password_title">Change Password.</string>
    <string name="index_fragment_account_management_change_password_message">Here, you can change your account password.</string>
    <string name="index_fragment_account_management_change_password_action">Change</string>


    <string name="activity_change_password_title">Change Password</string>
    <string name="activity_change_password_welcome">Change Password</string>
    <string name="activity_change_password_tag_line">Please fill out those fields &amp; make sure to create a secure and strong password.</string>
    <string name="activity_change_password_current_password">Current Password</string>
    <string name="activity_change_password_current_new_password">New Password</string>
    <string name="activity_change_password_current_confirm_new_password">Confirm New Password</string>
    <string name="activity_change_password_action_save">Save</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="subjects_fragment_no_subjects_tag">Mmmm..</string>
    <string name="subjects_fragment_no_subjects_message">Seems you didn\'t create any subjects</string>
    <string name="void_illustration">Void Illustration</string>
    <string name="create_new">Create new</string>
    <string name="create_new_subject">Create New Subject</string>
    <string name="title_activity_new_subject">NewSubjectActivity</string>


    <string name="activity_new_subject_text_create_new_subject_tagline">Here, you can create a subject.</string>
    <string name="activity_new_subject_text_create_new_subject_name_label">Subject Name</string>
    <string name="activity_new_subject_text_create_new_subject_name_hint">Type subject\’s name here..</string>


    <string name="activity_new_subject_text_save">Save</string>
    <string name="title_activity_edit_subject">Edit Subject</string>

    <string name="delete_subject_title">Delete Subject</string>
    <string name="delete_subject_message">Are you sure that you want to delete this subject?</string>
    <string name="delete_subject_action_cancel">Cancel</string>
    <string name="delete_subject_action_delete">Delete</string>
    <string name="delete_subject_action_deleting">Deleting...</string>

    <string name="activity_modules_title">Subject</string>
    <string name="activity_modules_edit_title_btn">Edit</string>
    <string name="activity_modules_modules">Modules</string>
    <string name="activity_modules_no_modules_tag">Mmmm..</string>
    <string name="activity_modules_no_modules_message">Seems you didn\'t create any modules</string>

    <string name="activity_modules_new_module_tagline">Here, you can create a subject.</string>
    <string name="activity_modules_new_module_title_label">Title</string>
    <string name="activity_modules_new_module_title_hint">Title of the module..</string>

    <string name="activity_modules_new_module_duration_label">Duration</string>
    <string name="activity_modules_new_module_duration_hint">Duration for the module..</string>


    <string name="activity_modules_new_module_priority_label">Priority</string>
    <string name="activity_modules_new_module_create_new_module">Create New Module</string>
    <string name="activity_modules_new_module_action_save">Save</string>

    <string name="delete_module_title">Delete Module</string>
    <string name="delete_module_message">Are you sure that you want to delete this module?</string>
    <string name="delete_module_action_cancel">Cancel</string>
    <string name="delete_module_action_delete">Delete</string>
    <string name="delete_module_action_deleting">Deleting...</string>

    <string name="activity_edit_modules_title">Edit Module</string>

    <string name="activity_module_title">Module</string>
    <string name="activity_module_no_schedule_message">This module has no schedule available yet, please generate the schedule if you need.</string>

    <string name="schedule_fragment_no_subjects_tag">Mmmm..</string>
    <string name="schedule_fragment_no_tasks">You don\'t have any secluded tasks.</string>
    <string name="schedule_fragment_no_pending_tasks">You don\'t have any pending tasks to perform.</string>
    <string name="schedule_fragment_no_finished_tasks">You have not finish any tasks.</string>
    <string name="schedule_void_illustration">Void Illustration</string>
    <string name="schedule_generate_schedule">Generate Schedule</string>

    <string name="generate_schedule_title">Generate Schedule</string>
    <string name="generate_schedule_message">Are you sure that you want to generate a new schedule?</string>
    <string name="generate_schedule_action_cancel">Cancel</string>
    <string name="generate_schedule_action_generate">Generate</string>
    <string name="generate_schedule_action_generating">Generating...</string>


    <string name="home_fragment_no_subjects_message">You have no any tasks for today...</string>


    <string name="edit_schedule_slot_activity_title_prefix">Reschedule Slot</string>
    <string name="edit_schedule_slot_activity_date_text">Date</string>
    <string name="edit_schedule_slot_activity_date_placeholder">The new date</string>
    <string name="edit_schedule_slot_activity_starts_at_text">Starts at</string>
    <string name="edit_schedule_slot_activity_starts_at_placeholder">The new starting time</string>
    <string name="edit_schedule_slot_activity_end_at_text">Ends at</string>
    <string name="edit_schedule_slot_activity_end_at_placeholder">The new ending time</string>
    <string name="edit_schedule_slot_activity_message">Here, you can change the date &amp; time of the activity and reschedule it.</string>


</resources>