<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_house"
            android:title="@string/activity_main_drawer_menu_home" />
        <item
            android:id="@+id/nav_subject"
            android:icon="@drawable/ic_book"
            android:title="@string/activity_main_drawer_menu_subjects" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar_days"
            android:title="@string/activity_main_drawer_menu_schedule" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_gear"
            android:title="@string/activity_main_drawer_menu_settings" />

        <item
            android:id="@+id/nav_account_management"
            android:icon="@drawable/ic_user"
            android:title="@string/activity_main_drawer_menu_account_management" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_right_from_bracket"
            android:title="@string/activity_main_drawer_menu_logout"
            android:checkable="false"/>
    </group>
</menu>