<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/delete_module_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_schedule_title"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/prompt_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_module_title"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/delete_module_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_schedule_message" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/generate_schedule_message"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/generate_schedule_action_cancel_btn"
                style="@style/Theme.Mapper.TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/generate_schedule_action_cancel" />

            <Button
                android:id="@+id/generate_schedule_action_generate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate_schedule_action_generate"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/generate_schedule_generating_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_module_title"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_schedule_action_generating" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:indeterminate="true"/>

    </LinearLayout>


</RelativeLayout>