<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.subjects.EditSubjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Mapper.NoActionBar.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Mapper.NoActionBar.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:visibility="invisible"
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_schedule_slot_activity_message"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:id="@+id/date_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/edit_schedule_slot_activity_date_text"
            app:placeholderText="@string/edit_schedule_slot_activity_date_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date|none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:id="@+id/starts_at_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/edit_schedule_slot_activity_starts_at_text"
            app:placeholderText="@string/edit_schedule_slot_activity_starts_at_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/starts_at_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:id="@+id/ends_at_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/edit_schedule_slot_activity_end_at_text"
            app:placeholderText="@string/edit_schedule_slot_activity_end_at_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ends_at_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/activity_new_subject_text_save" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/error_retry_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/error_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:text="Request timeout! Please try again."
            android:textSize="18sp"
            android:textAlignment="center"/>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="20dp"
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/retry"
            style="@style/Theme.Mapper.TransparentButton"
            app:icon="@drawable/ic_arrow_rotate_right"
            app:iconGravity="start"
            app:iconSize="14dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>